d2c-org/ilh-sales/rate-page/main/default/objects/Quote_Decision_Option__mdt/Quote_Decision_Option__mdt.object-meta.xml
<CustomObject>
    <label>Quote Decision Option</label>
    <pluralLabel>Quote Decision Options</pluralLabel>
</CustomObject>