d2c-org/ilh-sales/rate-page/main/default/objects/Quote_Decision_Option__mdt/fields/enabledForPartners__c.field-meta.xml
<CustomField>
    <fullName>enabledForPartners__c</fullName>
    <description>Add the partnercode for whom the decision enabled. Add the partnercode with comma separated.
Add All Partners if quotedecision is enabled for all.</description>
    <label>enabledForPartners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>