d2c-org/ilh-sales/rate-page/main/default/objects/Quote_Decision_Option__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this quote decision option is active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>