d2c-org/ilh-sales/rate-page/main/default/objects/Quote_Decision_Option__mdt/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2016 SITERM80</fullName>
            </value>
            <value>
                <fullName>2017 SITERM80 B2</fullName>
            </value>
            <value>
                <fullName>2016 GA Whole Life</fullName>
            </value>
            <value>
                <fullName>2021 SIWLANB</fullName>
            </value>
            <value>
                <fullName>2021 SIWLALB</fullName>
            </value>
            <value>
                <fullName>2022 Whole Life Conversion</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
                <default>true</default>
                <label>All Products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>