d2c-org/ilh-sales/rate-page/main/default/objects/Quote_Decision_Option__mdt/fields/SkipStates__c.field-meta.xml
<CustomField>
    <fullName>SkipStates__c</fullName>
    <label>Skip States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>